# modern.ie

./: .gitignore  LICENSE  Pipfile  bootstrap.sh  clickables.py  clickables.yml  invoke.yaml  tasks.py
bootstrap/: bootstrap.sh  environment.yml  pyproject.toml
etc/: ansible.cfg
inventory/: ansible.cfg
inventory/host_vars/: windows.yml
playbooks/: chocolatey.yml
vagrant/: Vagrantfile  winrm.ps1
